deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: example
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: example
    spec:
      containers:
      - image: openshift/deployment-example:v1
        imagePullPolicy: IfNotPresent
        name: example
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 1m
            memory: 32Mi
          limits:
            cpu: 1
            memory: 64Mi
        volumeMounts:
          - name: example
            subPath: application.properties
            mountPath: /deployments/config/application.properties
      volumes:
        - name: example
          configMap:
            name: example
