service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  ports:
  - name: tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: example
