route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example
spec:
  port:
    targetPort: tcp
  to:
    kind: Service
    name: example
